<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemRestaurant"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/light_grey">

    <RelativeLayout
        android:id="@+id/restaurant_informations_block"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_rib"
        android:layout_marginTop="@dimen/marginTop_rib"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--:: Restaurant name ::-->
        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_rn"
            android:textStyle="bold" />

        <!--:: Restaurant type ::-->
        <TextView
            android:id="@+id/restaurant_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_name"
            android:layout_marginTop="@dimen/marginTop_r_item"
            android:text="@string/restaurant_type"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_r_item" />


        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_name"
            android:layout_marginStart="@dimen/marginStart_r_item"
            android:layout_marginTop="@dimen/marginTop_r_item"
            android:layout_toEndOf="@id/restaurant_type"
            android:text="@string/dash"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_r_item" />

        <!--:: Restaurant address ::-->
        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_name"
            android:layout_marginStart="@dimen/marginStart_r_item"
            android:layout_marginTop="@dimen/marginTop_r_item"
            android:layout_toEndOf="@id/dash"
            android:text="@string/restaurant_address"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_r_item" />

        <!--:: Restaurant openings ::-->
        <TextView
            android:id="@+id/restaurant_openings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/restaurant_type"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/marginTop_r_hours_item"
            android:text="@string/restaurant_openings"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_r_item"
            android:textStyle="italic" />
    </RelativeLayout>

    <!--:: Distance from restaurant ::-->
    <TextView
        android:id="@+id/distance_from_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/distance_from_restaurant"
        android:textSize="@dimen/textSize_dfr"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <!--:: Counted coworkers ::-->
    <TextView
        android:id="@+id/counted_coworkers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_cc"
        android:layout_marginEnd="@dimen/marginEnd_cc"
        android:text="@string/counted_coworkers"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_cc"
        app:drawableStartCompat="@drawable/people_restaurant_icon"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_picture"
        app:layout_constraintTop_toBottomOf="@+id/distance_from_restaurant" />

    <!--:: Rating Bar ::-->
    <RatingBar
        android:id="@+id/restaurant_rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/marginEnd_rrb"
        android:isIndicator="true"
        android:numStars="1"
        android:progressTint="@color/yellow"
        android:rating="1"
        app:layout_constraintEnd_toStartOf="@+id/restaurant_picture"
        app:layout_constraintTop_toBottomOf="@+id/counted_coworkers" />

    <!--:: Restaurant picture ::-->
    <ImageView
        android:id="@+id/restaurant_picture"
        android:layout_width="@dimen/width_height_rp"
        android:layout_height="@dimen/width_height_rp"
        android:layout_marginEnd="@dimen/marginEnd_rp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/restaurant_picture"
        android:scaleType="fitXY"
        android:src="@drawable/john_smith_photo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/restaurant_picture" />
</androidx.constraintlayout.widget.ConstraintLayout>